--- a/Jenkins_test.html
+++ b/Jenkins_test.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <h1>Hello Jenkins Automation Test for Poll Schedule begins...</h1>
+    <h1>Hello Jenkins Automation Test for Poll Schedule ends now..</h1>
   </body>
 </html>
