Update Jenkins_test.html done

--- a/Jenkins_test.html
+++ b/Jenkins_test.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <h1>Hello Jenkins Automation Test for latest.</h1>
-    <h2>Test Poll SCM</h2>
+    <h2>Test Poll SCM Done</h2>
   </body>
 </html>
